# nexus

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/plans/: nexus_mvp_scaffold_26ea47b0.plan.md
.cursor/rules/: project-context.mdc  python-backend.mdc  testing.mdc  wiki-invariants.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py
nexus/: config.py  database.py  main.py
nexus/api/: dependencies.py  health.py  webhooks.py
nexus/models/: __init__.py  db.py  events.py
nexus/services/: github_client.py
nexus/worker/: settings.py  tasks.py
tests/: conftest.py
tests/services/: test_github_client.py
